--- a/CarData.ipynb
+++ b/CarData.ipynb
@@ -31,7 +31,7 @@
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "\n",
     "sns.set_palette(\"GnBu_d\")\n",
-    "sns.set_style('whitegrid')"
+    "sns.set_style('whitegrid') "
    ]
   },
   {
@@ -397,8 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "car_data3.dropna(subset=[\"type\"], inplace=True)\n",
-    "#car_data2= car_data1.dropna()\n"
+    "car_data3.dropna(subset=[\"type\"], inplace=True)"
    ]
   },
   {
