--- a/CarData.ipynb
+++ b/CarData.ipynb
@@ -970,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "bbd1d474",
+   "id": "e88aae6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "3ae02865",
+   "id": "f78ce74c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "44fdddd6",
+   "id": "5df3bc3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcdfd169",
+   "id": "6a22bac0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1637,8 +1637,9 @@
     "print(\"Train MSE : \" + str(model_train_mse))\n",
     "print(\"Test MSE : \" + str(model_test_mse))\n",
     "\n",
-    "Train MSE: 71505472.64577396\n",
-    "Test MSE: 70839447.42526068"
+    "#Ridge MSE\n",
+    "#Train MSE: 71505472.64577396\n",
+    "#Test MSE: 70839447.42526068"
    ]
   },
   {
